# nonebot-plugin-maimaimonitor

./: README.md  pyproject.toml
.github/workflows/: build.yml
nonebot_plugin_maimaimonitor/: __init__.py  client.py  config.py  constants.py  maimai_plugin_v11.py
